--- a/Duke CPR App/en.lproj/MainStoryboard.storyboard
+++ b/Duke CPR App/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C3006" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="bE2-V1-qfb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="bE2-V1-qfb">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -115,7 +115,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Training 1" id="eog-eu-P5f"/>
+                    <navigationItem key="navigationItem" title="Training 1" id="eog-eu-P5f">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="RNa-Ou-S6q">
+                            <connections>
+                                <action selector="donePressed:" destination="yZs-tt-GVC" id="7kq-H3-qbd"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hfg-dF-EsP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -147,7 +153,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Training 2" id="GL2-Nt-jz7"/>
+                    <navigationItem key="navigationItem" title="Training 2" id="GL2-Nt-jz7">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="pAV-dF-aab">
+                            <connections>
+                                <action selector="doneButtonPressed:" destination="P81-ud-H5S" id="EAS-XD-afv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Add-vw-wBf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -179,7 +191,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Training 4" id="sw9-Uu-uQR"/>
+                    <navigationItem key="navigationItem" title="Training 4" id="sw9-Uu-uQR">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="6Pf-7e-L3O">
+                            <connections>
+                                <action selector="doneButtonPressed:" destination="yHC-1a-qTV" id="U6e-CH-zSe"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tJn-hR-DaE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -197,7 +215,7 @@
                     <navigationItem key="navigationItem" title="Training 6" id="kzG-OD-Fsb">
                         <barButtonItem key="rightBarButtonItem" title="Done" id="sfZ-xB-9N2">
                             <connections>
-                                <action selector="doneButtonPressed:" destination="jD9-Hv-e99" id="upB-cZ-ZCj"/>
+                                <action selector="doneButtonPressed:" destination="jD9-Hv-e99" id="JOd-ak-AMc"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -232,7 +250,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Training 3" id="gP6-M0-yCg"/>
+                    <navigationItem key="navigationItem" title="Training 3" id="gP6-M0-yCg">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="yRU-yD-4W2">
+                            <connections>
+                                <action selector="doneButtonPressed:" destination="gx2-xm-RSY" id="S32-F4-HEE"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rF9-Ut-ekM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -264,7 +288,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Training 5" id="4RN-Md-PkF"/>
+                    <navigationItem key="navigationItem" title="Training 5" id="4RN-Md-PkF">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="GFF-oc-khk">
+                            <connections>
+                                <action selector="doneButtonPressed:" destination="cE1-AH-c6z" id="KNz-tS-iE6"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3vy-BG-O2a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -641,6 +671,98 @@
         <image name="funny_cartoon_zombie1.jpeg" width="400" height="400"/>
         <image name="large_car-accident.jpeg" width="480" height="360"/>
     </resources>
+    <classes>
+        <class className="AdditionalDataViewController" superclassName="GenericViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AdditionalDataViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="logo" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="CrisisModeViewController" superclassName="GenericViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisModeViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="CrisisStageFiveViewController" superclassName="CrisisModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageFiveViewController.h"/>
+        </class>
+        <class className="CrisisStageFourViewController" superclassName="CrisisModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageFourViewController.h"/>
+        </class>
+        <class className="CrisisStageOneViewController" superclassName="CrisisModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageOneViewController.h"/>
+        </class>
+        <class className="CrisisStageSixViewController" superclassName="CrisisModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageSixViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="doneButtonPressed:"/>
+            </relationships>
+        </class>
+        <class className="CrisisStageThreeViewController" superclassName="CrisisModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageThreeViewController.h"/>
+        </class>
+        <class className="CrisisStageTwoViewController" superclassName="CrisisModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CrisisStageTwoViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="dial911:"/>
+                <relationship kind="outlet" name="dialButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="GenericViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GenericViewController.h"/>
+        </class>
+        <class className="HomeViewController" superclassName="GenericViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="crisisModeButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="logo" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="TrainingModeStep1ViewController" superclassName="TrainingModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeStep1ViewController.h"/>
+        </class>
+        <class className="TrainingModeStep2ViewController" superclassName="TrainingModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeStep2ViewController.h"/>
+        </class>
+        <class className="TrainingModeStep3ViewController" superclassName="TrainingModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeStep3ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="doneButtonPressed:"/>
+            </relationships>
+        </class>
+        <class className="TrainingModeStep4ViewController" superclassName="TrainingModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeStep4ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="doneButtonPressed:"/>
+            </relationships>
+        </class>
+        <class className="TrainingModeStep5ViewController" superclassName="TrainingModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeStep5ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="doneButtonPressed:"/>
+            </relationships>
+        </class>
+        <class className="TrainingModeStep6ViewController" superclassName="TrainingModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeStep6ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="doneButtonPressed:"/>
+            </relationships>
+        </class>
+        <class className="TrainingModeViewController" superclassName="GenericViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeViewController.h"/>
+        </class>
+        <class className="VideoPlayerViewController" superclassName="GenericViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/VideoPlayerViewController.h"/>
+        </class>
+        <class className="WebsiteViewController" superclassName="GenericViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/WebsiteViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
