--- a/Duke CPR App/en.lproj/MainStoryboard.storyboard
+++ b/Duke CPR App/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="bE2-V1-qfb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C3006" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="bE2-V1-qfb">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -722,15 +722,18 @@
         </class>
         <class className="TrainingModeStep1ViewController" superclassName="TrainingModeViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeStep1ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="donePressed:"/>
+            </relationships>
         </class>
         <class className="TrainingModeStep2ViewController" superclassName="TrainingModeViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeStep2ViewController.h"/>
-        </class>
-        <class className="TrainingModeStep3ViewController" superclassName="TrainingModeViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeStep3ViewController.h"/>
             <relationships>
                 <relationship kind="action" name="doneButtonPressed:"/>
             </relationships>
+        </class>
+        <class className="TrainingModeStep3ViewController" superclassName="TrainingModeViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeStep3ViewController.h"/>
         </class>
         <class className="TrainingModeStep4ViewController" superclassName="TrainingModeViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeStep4ViewController.h"/>
