--- a/Duke CPR App/en.lproj/MainStoryboard.storyboard
+++ b/Duke CPR App/en.lproj/MainStoryboard.storyboard
@@ -8,6 +8,7 @@
         <scene sceneID="MCQ-6K-NNU">
             <objects>
                 <navigationController definesPresentationContext="YES" id="bE2-V1-qfb" sceneMemberID="viewController">
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="i15-CM-XYM">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -26,18 +27,12 @@
                     <view key="view" contentMode="scaleToFill" id="n6d-mE-7d1">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="1a_splash_1136.png" id="s3x-Od-AE2">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
-                            </imageView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="Wge-so-shf"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
-                        <outlet property="imageView" destination="s3x-Od-AE2" id="ZlS-lH-utd"/>
                         <segue destination="wgi-g7-pbv" kind="push" identifier="showHomeSegue" id="8iU-nG-Kw9"/>
                     </connections>
                 </viewController>
@@ -105,6 +100,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Home" id="Zj9-rs-6Oc"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Avc-4A-nPI" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -644,7 +640,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="1a_splash_1136.png" width="640" height="1136"/>
         <image name="2b_cprenergencybutton_1136.png" width="558" height="338"/>
         <image name="2c_cprtrainingbutn_1136.png" width="560" height="196"/>
         <image name="2d_additionalinfo)1136.png" width="558" height="118"/>
@@ -702,9 +697,6 @@
         </class>
         <class className="SplashScreenViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SplashScreenViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
-            </relationships>
         </class>
         <class className="TrainingModeStep1ViewController" superclassName="TrainingModeViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TrainingModeStep1ViewController.h"/>
